tests/NormalTests/paczka1/fuzzy1/59323873.err
Error in line 1: S362 S362 89,6
Error in line 6: Bpme S362 4,4
Error in line 27: uG+ S806 138,4
Error in line 26: l2uc5ANzIJ A211 76,0
